# kiro-demos

./: .gitignore  LICENSE  README.it.md  README.md
demo-agents/: .env.example  COST-ESTIMATE.md  README.it.md  README.md  teardown.sh
demo-agents/agentcore-deploy/: agent_config.yaml
demo-agents/bedrock-agent/: action_group.py  (+1 more)
demo-hooks/: .env.example  README.it.md  README.md
demo-powers/: .env.example  POWER.md  README.it.md  README.md  package-lock.json  package.json
demo-specs/: README.it.md  README.md  pyproject.toml
demo-specs/.kiro/specs/url-shortener/: .config.kiro  design.md  requirements.md  tasks.md
demo-specs/src/: url_shortener.py
demo-specs/tests/: test_url_shortener.py
demo-steering/: README.it.md  README.md
showcase-serverless-assistant/: .env.example  COST-ESTIMATE.md  README.it.md  README.md  local-dev.sh  pyproject.toml  requirements.txt  teardown.sh
showcase-serverless-assistant/.kiro/hooks/: security-check.json  test-on-save.json
showcase-serverless-assistant/.kiro/specs/assistant-api/: .config.kiro  design.md  requirements.md  tasks.md
showcase-serverless-assistant/.kiro/steering/: api-design.md  aws-best-practices.md
showcase-serverless-assistant/infra/: samconfig.toml  template.yaml
showcase-serverless-assistant/src/core/: assistant.py  models.py
showcase-serverless-assistant/src/handlers/: chat_handler.py  history_handler.py
showcase-serverless-assistant/src/utils/: aws_helpers.py
showcase-serverless-assistant/tests/integration/: test_api.py
showcase-serverless-assistant/tests/unit/: test_assistant.py
(+20 files in other folders)
